Se corrigieron los siguientes puntos: - Indicar campos obligatorios con asteriscos (*) - Error en diseño en el panel de notificaciones, la informacion se ve remontada - Se esta presentando una inconsistencia en el diseño de creacion y edicion de Sprints - Mejoras en los breadcrums de crear y editar ítems, pues siempre apuntaban al Product Backlog

--- a/src/BackendBundle/Resources/public/css/style.css
+++ b/src/BackendBundle/Resources/public/css/style.css
@@ -174,10 +174,14 @@ h1.page-header {
 }
 
 .small-margin-top {
-    margin-top: 4px;
+    margin-top: 6px;
 }
 
 .span-effort img {
     width: 19px;
     margin-left: 10px;
+}
+
+span.label-notification {
+    padding: 6px 10px;
 }
