--- a/src/BackendBundle/Resources/views/Project/ProductBacklog/index.html.twig
+++ b/src/BackendBundle/Resources/views/Project/ProductBacklog/index.html.twig
@@ -92,7 +92,7 @@
             {% for item in pagination %}
                 <tr {% if loop.index is odd %}class="color"{% endif %}>
                     <td><a href="{{ path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id}) }}">{{item.consecutive}}</a></td>
-                    <td><a href="{{ path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id}) }}" class="popover-menu" title="{{ item.title }}" content="{{item.description|raw}}">{{ item.title }}</a></td>
+                    <td><a href="{{ path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id}) }}" class="popover-menu" title="{{ item.title }}" content="{{item.description|escape|raw}}">{{ item.title }}</a></td>
                     <td>{{ item.getTextType()|trans }}</td>
                     <td>{{ item.creationDate|date(dateFormat) }}</td>
                     <td>{{ item.priority|default(0) }}</td>
