--- a/src/BackendBundle/Resources/views/Project/ProductBacklog/new.html.twig
+++ b/src/BackendBundle/Resources/views/Project/ProductBacklog/new.html.twig
@@ -10,9 +10,19 @@
             </h1>
             
             {% set item2 = {'text': project.name, 'url':path('backend_projects_view',{'id':project.id}),'icon':'fa fa-dashboard'} %}
-            {% set item3 = {'text': 'backend.backlog.product_backlog'|trans, 'url':path('backend_project_product_backlog',{'id':project.id}), 'icon':'fa fa-list'} %}
-            {% set item4 = {'text': 'backend.item.new'|trans, 'icon':'fa fa-star-o'} %}
-            {% set items = [item2, item3, item4] %}
+            
+            {% if app.request.get('sprintId') is empty %}
+                {% set item3 = {'text': 'backend.backlog.product_backlog'|trans, 'url':path('backend_project_product_backlog',{'id':project.id}), 'icon':'fa fa-list'} %}
+                {% set item4 = {'text': 'backend.item.new'|trans, 'icon':'fa fa-star-o'} %}
+                {% set items = [item2, item3, item4] %}
+            {% else %}
+                {% set item3 = {'text': 'backend.sprint.sprints'|trans, 'url':path('backend_project_sprints',{'id':project.id}), 'icon':'fa fa-rotate-right'} %}
+                {% set item4 = {'text': item.sprint, 'url':path('backend_project_sprints_backlog',{'id':project.id,'sprintId':item.sprint.id}),'icon':'fa fa-list'} %}
+                {% set item5 = {'text': 'backend.item.new'|trans, 'icon':'fa fa-star-o'} %}
+                {% set items = [item2, item3, item4, item5] %}
+            {% endif %}
+            
+            
             {{ filters.breadcrum(items) }}
         </div>
     </div>
