- Mejoras en el Frontend de la aplicación (textos, validación de campos, etc) - Mejoras de diseño en el nav bar

--- a/src/FrontendBundle/Resources/views/Default/createAccount.html.twig
+++ b/src/FrontendBundle/Resources/views/Default/createAccount.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Create Account - Agile SCRUM{% endblock %}
 {% block content_header %}
     {#    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/contact-bg.jpg')}}')">#}
-    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum4.jpg')}}')">
+    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum4.jpg')}}'); background-position-y: 50px; margin-bottom: 30px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
