--- a/src/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontendBundle/Resources/views/Default/index.html.twig
@@ -2,12 +2,12 @@
 
 {% block content_header %}
 {#    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/home-bg.jpg')}}')">#}
-      <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum1.jpg')}}'); height: 500px;">
+      <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum1.jpg')}}'); height: 443px; margin-bottom: 30px; background-position-y: 50px;">
         <div class="container">
 
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="site-heading">
+                    <div class="site-heading no-padding-bottom">
                         <h1 style="text-shadow: 3px 3px darkcyan;">Project Management and Scrum Software</h1>
 {#                        <hr class="small">#}
                         <span class="subheading">&nbsp;</span>
@@ -59,7 +59,7 @@
                 See your daily progress, no matter where you are
             </h2>
             <p>
-                Monitor the status of tasks on your Scrumboard in real-time.  Observe delays, impediments and progress throughout the day without having to refresh your browser.  Agilo is the ideal tool for distributed teams.
+                Monitor the status of tasks on your Scrumboard in real-time.  Observe delays, impediments and progress throughout the day without having to refresh your browser.  Agile Scrum is the ideal tool for distributed teams.
             </p>
         </div>
         <hr>
