--- a/src/FrontendBundle/Resources/views/Default/whyAgileScrum.html.twig
+++ b/src/FrontendBundle/Resources/views/Default/whyAgileScrum.html.twig
@@ -1,12 +1,13 @@
 {% extends 'FrontendBundle:Default:main.html.twig'  %}
-{% block title %}Sample Post - Agile SCRUM{% endblock %}
+{% block title %}Why Agile Scrum - Agile SCRUM{% endblock %}
 {% block content_header %}
 {#    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/post-bg.jpg')}}')">#}
-    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum3.jpeg')}}'); height: 500px;">
+    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum3.jpeg')}}'); height: 500px; margin-bottom: 30px; background-position-y: 50px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading">
+                        <h1>&nbsp;</h1>
                         {#<h1>Man must explore, and this is exploration at its greatest</h1>
                         <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
                         <span class="meta">Posted by <a href="#">Start Bootstrap</a> on August 24, 2014</span>#}
