--- a/src/FrontendBundle/Resources/views/Default/features.html.twig
+++ b/src/FrontendBundle/Resources/views/Default/features.html.twig
@@ -1,16 +1,16 @@
 {% extends 'FrontendBundle:Default:main.html.twig'  %}
-{% block title %}About - Agile SCRUM{% endblock %}
+{% block title %}Features - Agile SCRUM{% endblock %}
 {% block content_header %}
     {#    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/about-bg.jpg')}}')">#}
-    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum2.png')}}'); height: 560px;">
+    <header class="intro-header" style="background-image: url('{{asset('bundles/frontend/img/scrum2.png')}}'); height: 500px; margin-bottom: 30px; background-position-y: 50px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    {#<div class="page-heading">
-                        <h1>About Me</h1>
-                        <hr class="small">
-                        <span class="subheading">This is what I do.</span>
-                    </div>#}
+                    <div class="page-heading">
+                        <h1>&nbsp;</h1>
+                        {#<hr class="small">
+                        <span class="subheading">This is what I do.</span>#}
+                    </div>
                 </div>
             </div>
         </div>
