--- a/src/BackendBundle/Resources/views/Default/macros.html.twig
+++ b/src/BackendBundle/Resources/views/Default/macros.html.twig
@@ -74,7 +74,7 @@
                 <div class="col-lg-12 col-md-12 col-xs-12 no-padding-sides">
                 <strong>{{ item.getTextType()|trans }} # {{item.consecutive}}</strong>
                 </div>
-                <div class="col-lg-12 col-md-12 col-xs-12 no-padding-left">
+                <div class="col-lg-12 col-md-12 col-xs-12 no-padding-left small-margin-bottom">
                     {% set edithPath = path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id}) %}
                     {% if sprint is not empty %}
                         {% set edithPath = path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id, 'sprintId':sprint.id}) %}
