--- a/src/BackendBundle/Resources/views/Project/ProductBacklog/new.html.twig
+++ b/src/BackendBundle/Resources/views/Project/ProductBacklog/new.html.twig
@@ -45,11 +45,15 @@
                     {{ form_errors(form.title) }}
                 </div>
                 <div class="form-group">
-                    <div class="col-xs-11" style="padding-left: 0px;">
+                    <div class="col-xs-10 no-padding-left">
                         {{ form_label(form.priority)}}
-                        {{ form_widget(form.priority, {'attr':{'style':'cursor:pointer;','onchange':'rangevalue.value=value','onkeyup':'rangevalue.value=value'},}) }}
+                        {{ form_widget(form.priority, {'attr':{'style':'cursor:pointer;','onchange':'rangevalue.value=value','onmousemove':'rangevalue.value=value','onkeyup':'rangevalue.value=value'},}) }}
+                        <div class="col-lg-12 col-md-12 col-xs-12 no-padding-sides" style="margin-bottom: 18px;">
+                            <span class="pull-left green-color">{{'backend.global.low'|trans}}</span>
+                            <span class="pull-right red-color">{{'backend.global.high'|trans}}</span>
+                        </div>
                     </div>
-                    <output class="alert alert-box col-xs-1 text-center pull-right no-margin-bottom" id="rangevalue">{{item.priority|default(50)}}</output>
+                    <output class="alert alert-box col-xs-2 text-center pull-right no-margin-bottom" id="rangevalue">{{item.priority|default(50)}}</output>
                 </div>
                 <div class="form-group col-xs-6 no-padding-left">
                     {{ form_label(form.designedUser)}}
