--- a/src/BackendBundle/Resources/views/Project/Sprint/backlog.html.twig
+++ b/src/BackendBundle/Resources/views/Project/Sprint/backlog.html.twig
@@ -221,6 +221,16 @@
             autoScale: false,
             autoDimensions: false,
         });
+        
+        $(".copy-move-to-sprint").fancybox({
+            width: '500px',
+            height: '350px',
+            autoSize: true,
+            autoScale: false,
+            autoDimensions: false,
+        });
+        
+        
 
         {# Codigo para que el cliente pueda eliminar items #}
         $(".delete-item").click(function () {
