--- a/src/BackendBundle/Resources/views/Default/macros.html.twig
+++ b/src/BackendBundle/Resources/views/Default/macros.html.twig
@@ -66,7 +66,7 @@
     {% endif %}
 {% endmacro %}  
 
-{% macro itemDescription(item, project, sprint, moreItems) %}
+{% macro itemDescription(item, project, in_sprint_backlog, moreItems, in_product_backlog = false, in_binnacle = false) %}
     {% set dateFormat = project.settings.dateFormat %}
     <div class="list-group-item col-xs-12 {% if item.parent is empty %}custom-well{% endif %}">
         <div class="col-xs-10 col-md-11 col-lg-11 no-padding-left">
@@ -76,8 +76,8 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-xs-12 no-padding-left small-margin-bottom">
                     {% set edithPath = path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id}) %}
-                    {% if sprint is not empty %}
-                        {% set edithPath = path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id, 'sprintId':sprint.id}) %}
+                    {% if item.sprint is not empty %}
+                        {% set edithPath = path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id, 'sprintId':item.sprint.id}) %}
                     {% endif %}
                     <a href="{{ edithPath }}" title="{{ item.title }}" class="popover-menu" content="{{item.description|escape|raw}}">{{ item.title }}</a>
                 </div>
@@ -107,12 +107,16 @@
         </div>
         
         <div class="col-xs-2 col-md-1 col-lg-1 pull-right no-padding-sides">
-            {% if sprint is not empty %}
+            {% if in_sprint_backlog or in_product_backlog %}
                 {% if item.type != constant('BackendBundle\\Entity\\Item::TYPE_USER_HISTORY') %}
                     <label title="{{'backend.item.worked_estimated_time'|trans}}" class="col-xs-12 text-right label-item-times">{{ item.workedHours|default(0) }} / {{ item.estimatedHours|default(0) }}</label>
                 {% endif %}
                 <div class="btn-group pull-right small-btn-group">
-                    <a class="btn btn-default btn-sm border-radius-left" title="{{ 'backend.item.edit'|trans }}" href="{{ path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id, 'sprintId':sprint.id}) }}">
+                    {% set edit_params = {'id':project.id, 'itemId':item.id} %}
+                    {% if item.sprint is not empty %}
+                        {% set edit_params = {'id':project.id, 'itemId':item.id, 'sprintId':item.sprint.id} %}
+                    {% endif %}    
+                    <a class="btn btn-default btn-sm border-radius-left" title="{{ 'backend.item.edit'|trans }}" href="{{ path('backend_project_product_backlog_edit', edit_params) }}">
                         <i class="fa fa-pencil"></i>
                     </a>
                     <button type="button" class="btn btn-default btn-sm dropdown-toggle border-radius-right" data-toggle="dropdown">
@@ -122,22 +126,26 @@
                     <ul class="dropdown-menu backlog-menu" role="menu">
                         {% if moreItems %}
                             <li><a href="{{path('backend_project_product_backlog_new_related_item',{'id':project.id,'itemId':item.id})}}" class="create-related-item fancybox.iframe"><i class="fa fa-star-o"></i> {{'backend.item.create_related_item'|trans}}</a></li>
-                            {% endif %}
+                        {% endif %}
                         <li class="divider"></li>
                         <li class="disabled"><a href="#"><i class="fa fa-comment-o"></i> Agregar Comentario</a></li>
                         <li><a href="javascript:void(0);" class="change-status" item-id="{{item.id}}" status="{{item.status}}"><i class="fa fa-arrows-h"></i> {{ 'backend.item.change_status'|trans }}</a></li>
                         <li><a href="javascript:void(0);" class="change-priority" item-id="{{item.id}}" priority="{{item.priority|default(0)}}"><i class="fa fa-reorder"></i> {{'backend.item.change_priority'|trans}}</a></li>
                         {% if item.type != constant('BackendBundle\\Entity\\Item::TYPE_USER_HISTORY') %}
                             <li><a href="javascript:void(0);" class="edit-estimation" item-id="{{item.id}}" estimation="{{item.estimatedHours|default(0)}}"><i class="fa fa-clock-o"></i> {{'backend.item.edit_estimation'|trans}}</a></li>
-                            <li><a href="javascript:void(0);" class="edit-worked-time" item-id="{{item.id}}" worked-time="{{item.workedHours|default(0)}}"><i class="fa fa-clock-o"></i> {{'backend.item.edit_worked_time'|trans}}</a></li>
+                            {% if in_sprint_backlog %}
+                                <li><a href="javascript:void(0);" class="edit-worked-time" item-id="{{item.id}}" worked-time="{{item.workedHours|default(0)}}"><i class="fa fa-clock-o"></i> {{'backend.item.edit_worked_time'|trans}}</a></li>
+                            {% endif %}
                         {% endif %}
                         <li class="divider"></li>
                         <li><a href="{{path('backend_project_product_backlog_copy_move_to_sprint',{'id':project.id,'itemId':item.id})}}" class="copy-move-to-sprint fancybox.iframe"><i class="fa fa-cut"></i> <i class="fa fa-copy"></i> {{'backend.item.move_copy_other_sprint'|trans}}</a></li>
+                        <li><a href="{{path('backend_project_product_backlog_copy_move_to_project',{'id':project.id,'itemId':item.id})}}" class="copy-move-to-project fancybox.iframe"><i class="fa fa-cut"></i> <i class="fa fa-copy"></i> {{'backend.item.move_copy_other_project'|trans}}</a></li>
                         <li class="divider"></li>
                         <li><a href="javascript:void(0);" class="delete-item" item-id="{{item.id}}"><i class="fa fa-times"></i> {{'backend.global.delete'|trans}}</a></li>
                     </ul>
                 </div>
-            {% else %}
+            {% endif %}
+            {% if in_binnacle and item.sprint is not empty %}
                 <label class="col-xs-12 text-right label-item-times">{{ item.sprint.name }}</label>
             {% endif %}
         </div>
