--- a/src/BackendBundle/Resources/views/Project/ProductBacklog/copyMoveToProject.html.twig
+++ b/src/BackendBundle/Resources/views/Project/ProductBacklog/copyMoveToProject.html.twig
@@ -1,11 +1,11 @@
 {% extends 'BackendBundle:Default:mainFancybox.html.twig' %}
-{% block title %}{{'backend.item.move_copy_other_sprint'|trans}}{% endblock %}
+{% block title %}{{'backend.item.move_copy_other_project'|trans}}{% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                {{'backend.item.move_copy_other_sprint'|trans}}
+                {{'backend.item.move_copy_other_project'|trans}}
             </h1>
         </div>
     </div>
@@ -15,7 +15,7 @@
     
     <div class="row">
         {% set form_params = {'id':project.id, 'itemId':item.id} %}
-        {{ form_start(form, {'action': path('backend_project_product_backlog_copy_move_to_sprint', form_params), 'method': 'POST'}) }}
+        {{ form_start(form, {'action': path('backend_project_product_backlog_copy_move_to_project', form_params), 'method': 'POST'}) }}
             <div class="col-lg-6 col-md-6 col-xs-6">
                 <div class="form-group container-radios">
                     {{ form_label(form.action)}}<em>*</em>
@@ -30,9 +30,9 @@
             </div>
             <div class="col-lg-6 col-md-6 col-xs-6">
                 <div class="form-group">
-                    {{ form_label(form.new_sprint)}}
-                    {{ form_widget(form.new_sprint, {'attr':{'class':'form-control'}}) }}
-                    {{ form_errors(form.new_sprint) }}
+                    {{ form_label(form.user_project)}}
+                    {{ form_widget(form.user_project, {'attr':{'class':'form-control'}}) }}
+                    {{ form_errors(form.user_project) }}
                 </div>
             </div>
             <div class="col-lg-12">
