--- a/src/BackendBundle/Resources/views/Default/macros.html.twig
+++ b/src/BackendBundle/Resources/views/Default/macros.html.twig
@@ -66,7 +66,7 @@
     {% endif %}
 {% endmacro %}  
 
-{% macro itemDescription(item, project, in_sprint_backlog, moreItems, in_product_backlog = false, in_binnacle = false) %}
+{% macro itemDescription(item, project, in_backlog, moreItems, in_binnacle = false) %}
     {% set dateFormat = project.settings.dateFormat %}
     <div class="list-group-item col-xs-12 {% if item.parent is empty %}custom-well{% endif %}">
         <div class="col-xs-10 col-md-11 col-lg-11 no-padding-left">
@@ -107,7 +107,7 @@
         </div>
         
         <div class="col-xs-2 col-md-1 col-lg-1 pull-right no-padding-sides">
-            {% if in_sprint_backlog or in_product_backlog %}
+            {% if in_backlog %}
                 {% if item.type != constant('BackendBundle\\Entity\\Item::TYPE_USER_HISTORY') %}
                     <label title="{{'backend.item.worked_estimated_time'|trans}}" class="col-xs-12 text-right label-item-times">{{ item.workedHours|default(0) }} / {{ item.estimatedHours|default(0) }}</label>
                 {% endif %}
@@ -142,8 +142,7 @@
                         <li><a href="javascript:void(0);" class="delete-item" item-id="{{item.id}}"><i class="fa fa-times"></i> {{'backend.global.delete'|trans}}</a></li>
                     </ul>
                 </div>
-            {% endif %}
-            {% if in_binnacle and item.sprint is not empty %}
+            {% elseif in_binnacle and item.sprint is not empty %}
                 <label class="col-xs-12 text-right label-item-times">{{ item.sprint.name }}</label>
             {% endif %}
         </div>
