--- a/src/BackendBundle/Resources/views/Project/ProductBacklog/index.html.twig
+++ b/src/BackendBundle/Resources/views/Project/ProductBacklog/index.html.twig
@@ -56,23 +56,88 @@
     </div>
 
     {% set dateFormat = project.settings.dateFormat %}
-    
-    <div class="rstable">
+
+    {#<div class="rstable">
         {% for item in pagination %}
             <div class="col-lg-12 col-md-12 col-xs-12 no-padding-right main-item">
-                {{ filters.itemDescription(item, project, false, true, true, false) }}
+                {{ filters.itemDescription(item, project, true, true, false) }}
                 {% if item.children is not empty %}
                     <div class="list-group col-lg-12 col-md-12 container-child no-padding-right">
                         {% for firstChild in item.children %}
-                            {{ filters.itemDescription(firstChild, project, false, true, true, false) }}
+                            {{ filters.itemDescription(firstChild, project, true, true, false) }}
                         {% endfor %}
                     </div>
                 {% endif %}
             </div>
         {% endfor %}
+    </div>#}
+    <div class="col-lg-12 no-padding-sides">
+        <div class="rstable">
+
+            <ol parent="{{constant('BackendBundle\\Entity\\Item::EMPTY_PARENT')}}" class="default vertical">
+                {% for item in pagination %}
+                    <li item-id='{{item.id}}' parent="{{constant('BackendBundle\\Entity\\Item::EMPTY_PARENT')}}" priority="{{item.priority|default(0)}}" class="backlog-item">
+                        {{ filters.itemDescription(item, project, true, true) }}
+                        {% if item.children is not empty %}
+                            <ol parent='{{item.id}}' >
+                                {% for firstChild in item.children %}
+                                    <li item-id='{{firstChild.id}}' parent='{{item.id}}' priority="{{firstChild.priority|default(0)}}" class="backlog-item">
+                                        {{ filters.itemDescription(firstChild, project, true, true) }}
+                                        {% if firstChild.children is not empty %}
+                                            <ol parent='{{firstChild.id}}'>
+                                                {% for secondChild in firstChild.children %}
+                                                    <li item-id='{{secondChild.id}}' parent='{{firstChild.id}}' priority="{{secondChild.priority|default(0)}}" class="backlog-item">
+                                                        {{ filters.itemDescription(secondChild, project, true, true) }}
+                                                        {% if secondChild.children is not empty %}
+                                                            <ol parent='{{secondChild.id}}'>
+                                                                {% for thirdChild in secondChild.children %}
+                                                                    <li item-id='{{thirdChild.id}}' parent='{{secondChild.id}}' priority="{{thirdChild.priority|default(0)}}" class="backlog-item">
+                                                                        {{ filters.itemDescription(thirdChild, project, true, true) }}
+                                                                        {% if thirdChild.children is not empty %}
+                                                                            <ol parent='{{thirdChild.id}}'>
+                                                                                {% for fourtChild in thirdChild.children %}
+                                                                                    <li item-id='{{fourtChild.id}}' parent='{{thirdChild.id}}' priority="{{fourtChild.priority|default(0)}}" class="backlog-item">
+                                                                                        {{ filters.itemDescription(fourtChild, project, true, false) }}
+                                                                                        {% if fourtChild.children is not empty %}
+                                                                                            <ol parent='{{fourtChild.id}}'>
+                                                                                                {% for fifthChild in fourtChild.children %}
+                                                                                                    <li item-id='{{fifthChild.id}}' parent='{{fourtChild.id}}' priority="{{fifthChild.priority|default(0)}}" class="backlog-item">
+                                                                                                        {{ filters.itemDescription(fifthChild, project, true, false) }}
+                                                                                                    </li>
+                                                                                                {% endfor %}
+                                                                                            </ol>
+                                                                                        {% endif %}
+                                                                                    </li>
+                                                                                {% endfor %}
+                                                                            </ol>
+                                                                        {% else %}
+                                                                            <ol parent="{{thirdChild.id}}"></ol>
+                                                                        {% endif %}
+                                                                    </li>
+                                                                {% endfor %}
+                                                            </ol>
+                                                        {% else %}
+                                                            <ol parent="{{secondChild.id}}"></ol>
+                                                        {% endif %}
+                                                    </li>
+                                                {% endfor %}
+                                            </ol>
+                                        {% else %}
+                                            <ol parent="{{firstChild.id}}"></ol>
+                                        {% endif %}
+                                    </li>
+                                {% endfor %}
+                            </ol>
+                        {% else %}
+                            <ol parent="{{item.id}}"></ol>
+                        {% endif %}
+                    </li>
+                {% endfor %}
+            </ol>
+        </div>
     </div>
-    
-    
+
+
     {#<div class="table-responsive">
         <table class="table table-bordered table-hover no-margin-bottom">
             <tr>
@@ -145,13 +210,13 @@
 {% block scripts %}
     $("#backendbundle_search_item_type_item_type").val("{{ pagination.params.item_type|default('')}}");
     $("#backendbundle_search_item_type_item_designed_user").val("{{ pagination.params.item_designed_user|default('')}}");
-    
+
 {% endblock %}
 
 {% block functions_javascript %}
-    
+
     var unknownErrorMessage = "{{'backend.global.unknown_error'|trans}}";
-    
+
     var changePriorityTitle = "{{'backend.item.change_priority'|trans}}";
     var changePriorityLabel = "{{'backend.global.save_changes'|trans}}";
     var changePriorityCancel = "{{'backend.global.cancel'|trans}}";
@@ -168,21 +233,21 @@
     var simpleDeleteLabel = "{{'backend.item.simple_delete'|trans}}";
     var simpleDeleteConstant = "{{constant('BackendBundle\\Entity\\Item::DELETE_SIMPLE')}}";
     var cancelLabel = "{{'backend.global.cancel'|trans}}";
-    
+
     var editEstimationHtmlPath = "{{path('backend_project_product_backlog_html_edit_estimation',{'id':project.id})}}";
     var editEstimationTitle = "{{'backend.item.edit_estimation'|trans}}";
     var editEstimationLabel = "{{'backend.global.save_changes'|trans}}";
     var editEstimationPath = "{{path('backend_project_product_backlog_edit_estimation',{'id':project.id})}}";
-    
+
     var changeStatusHtmlPath = "{{path('backend_project_product_backlog_html_change_status',{'id':project.id})}}";
     var changeStatusTitle = "{{'backend.item.change_status'|trans}}";
     var saveChangesLabel = "{{'backend.global.save_changes'|trans}}";
     var changeStatusPath = "{{path('backend_project_product_backlog_change_status',{'id':project.id})}}";
-    
+
     var modifyParentPath = "{{path('backend_project_product_backlog_change_parent',{'id':project.id})}}";
-    
+
     var editWorkedTimeHtmlPath = "{{path('backend_project_product_backlog_html_edit_worked_time',{'id':project.id})}}";
     var workedTimeTitle = "{{'backend.item.edit_worked_time'|trans}}";
     var editWorkedTimePath = "{{path('backend_project_product_backlog_edit_worked_time',{'id':project.id})}}";
-    
+
 {% endblock %}
