--- a/src/BackendBundle/Resources/views/Default/main.html.twig
+++ b/src/BackendBundle/Resources/views/Default/main.html.twig
@@ -127,6 +127,12 @@
                     object.popover({title: title, content: content, html: true, placement: "auto", trigger: "hover"});
                 });
 
+                if ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+                    $(".navbar-brand").html('Agile Scrum Mobile');
+                } else {
+                    $(".navbar-brand").html('Agile Scrum Web');
+                }
+
                 {% block scripts %}
                 {% endblock %}
                 });
