--- a/src/BackendBundle/Resources/views/Default/main.html.twig
+++ b/src/BackendBundle/Resources/views/Default/main.html.twig
@@ -70,7 +70,6 @@
 
         <!-- jQuery -->
         <script src="{{ asset('bundles/backend/js/jquery.js') }}"></script>
-{#        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>#}
 
         <!-- jQuery UI-->
         <script src="{{ asset('bundles/backend/jquery-ui/jquery-ui.js') }}"></script>
@@ -104,13 +103,10 @@
         <script type="text/javascript" src="{{ asset('bundles/backend/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7')}}"></script>
         <!-- End Fancybox JS -->
 
-        {#<script src="https://code.highcharts.com/highcharts.js"></script>#}
         <script src="{{ asset('bundles/backend/js/highcharts.js') }}"></script>
         
-        {% block other_scripts %}
-        {% endblock %}
-
         <script type="text/javascript">
+            var is_mobile_device = false;
             $(document).ready(function () {
 
                 /* Libreria Safary */
@@ -127,10 +123,9 @@
                     object.popover({title: title, content: content, html: true, placement: "auto", trigger: "hover"});
                 });
 
+                /* Validacion para saber si estamos en un dispositivo mobile o no */
                 if ( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-                    $(".navbar-brand").html('Agile Scrum Mobile');
-                } else {
-                    $(".navbar-brand").html('Agile Scrum Web');
+                    is_mobile_device = true;
                 }
 
                 {% block scripts %}
@@ -139,5 +134,8 @@
             {% block functions_javascript %}
             {% endblock %}
         </script>
+        
+        {% block other_scripts %}
+        {% endblock %}
     </body>
 </html>
