--- a/src/BackendBundle/Resources/views/Default/macros.html.twig
+++ b/src/BackendBundle/Resources/views/Default/macros.html.twig
@@ -69,10 +69,11 @@
 {% macro itemDescription(item, project, in_backlog, moreItems, in_binnacle = false) %}
     {% set dateFormat = project.settings.dateFormat %}
     <div class="list-group-item col-xs-12 {% if item.parent is empty %}custom-well{% endif %}">
-        <div class="col-xs-10 col-md-11 col-lg-11 no-padding-left">
+        <div class="col-xs-10 col-md-11 col-lg-11 small-padding-left {{item.getLabelClassByStatus(false, true)}}">
             <div class="col-lg-8 col-md-8 col-xs-12 no-padding-sides">
                 <div class="col-lg-12 col-md-12 col-xs-12 no-padding-sides">
-                <strong>{{ item.getTextType()|trans }} # {{item.consecutive}}</strong>
+                    <img src="{{asset('bundles/backend/images/items/'~item.getIconName())}}" width="25px"/>
+                    <strong>&nbsp;{{ item.getTextType()|trans }} # {{item.consecutive}}</strong>
                 </div>
                 <div class="col-lg-12 col-md-12 col-xs-12 no-padding-left small-margin-bottom">
                     {% set edithPath = path('backend_project_product_backlog_edit',{'id':project.id, 'itemId':item.id}) %}
